# pytesttut

./: .gitignore  environment.yml  setup.cfg
pytesttut/: funcs.py
tests/: test_funcs.py
