[metadata]
name = pytesttut
version = 0.1.0
author = Dan D'Avella
author-email = ddavella@stsci.edu
home-page = https://github.com/drdavella/pytesttut
description = A simple tutorial for writing tests in pytest
platform = any
keywords = python pytest tutorial

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
packages = pytesttut
test_suite = tests
setup_requires =
    setuptools >=38.3.0
tests_require =
    pytest
